@@ -244,6 +244,10 @@ int STARPU_ATTRIBUTE_WARN_UNUSED_RESULT _starpu_driver_copy_data_1_to_1(starpu_d
 
 		dst_replicate->initialized = 1;
 
+		if (dst_replicate->mc)
+			/* When we have the data there, make sure it stays there for the task.  */
+			dst_replicate->mc->nb_tasks_prefetch += req->nb_tasks_prefetch;
+
 		_STARPU_TRACE_START_DRIVER_COPY(src_node, dst_node, size, com_id, prefetch, handle);
 		int ret_copy = copy_data_1_to_1_generic(handle, src_replicate, dst_replicate, req);
 		if (!req)
